Add tasks redirect logic

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,6 @@
 # SERVER
 PORT=8080
+ADMIN_SERVICE_PORT=3000
 API_PREFIX=api
 CONTEXT=v1/gateway-service
 ORIGINS=http://localhost:3000,http://localhost:8080
